# bmbt

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  Readme.md  acpi.md  bmbt-virtualization.md  bmbt.inf  capstone-uefi.patch  capstone.mk  commit.sh  debug.md  debug2.md  debug3.md  debug4.md  dmesg-irq_domain_set_mapping.md  env.mk  fixme.md  hwbreak.patch  interface.md  kernel-mode.md  kernel.mk  kernel.sh  lvz_timer.patch  multiboot.md  non_lazy_lbt.patch  plans.md  quirk.md  run-helloworld-in-LA-bare-metal.md  run.sh  run_xqm.sh  seabios.mk  seabios.patch  stop.sh  unitest.md  xdebug.md
.husky/: pre-commit
bt/: captive.md
doc/: 5000-manula.md  Analysis-memblock_add_range.md  Readme.md  acpi.md  bmbt-virtualization.md  capstone.md  check-sheet.md  complex-files.md  debug-kernel-with-kvm.md  debug.md  divergence.md  draft.md  fw_cfg.md  hotplug-reset.md  i386.md  init-Kernel.md  init-QEMU.md  init-x86.md  interface.md  irq-domain-liointc.md  irq-domain-pch-pic.md  irqdomain-draft.md  irqdomain.md  isa-dev.md  kernel-init.md  loader.md  locks.md  loogson-vz.md  loongarch-irq.md  memory-model.md  mttcg-locks.md  mttcg.md  newbie.md  no-pci-dev.md  optimize.md  (+33 more)
src/i386/LATX/: env.c  error.c  etb.c  latx-config.c  latx-options.c  mem.c  memwatch.c  meson.build  option.h  sys-test.c  test-def.c  trace-events  x86tomips-config-sys.h  x86tomips-config.c  x86tomips-config.h  x86tomips-options.c  x86tomips-options.h  x86tomips-profile-sys.c  x86tomips-profile-sys.h  x86tomips-profile.c
src/i386/LATX/capStone/: SStream.c  cs.c
src/i386/LATX/capStone/arch/X86/: X86Disassembler.c  X86IntelInstPrinter.c  X86Mapping.c
src/i386/LATX/capstone/: capstone.h  x86.h
src/i386/LATX/debug/: lockstep.c  lockstep.h
src/i386/LATX/include/: common.h  cross-page-check.h  ds-set.h  env.h  error.h  etb.h  flag-lbt.h  flag-pattern.h  flag-reduction.h  flag-usedef.h  flag_lbt.h  flag_pattern.h  flag_usedef.h  ibtc.h  ir2.h  latx-test-sys.h  latx-types.h  lsenv.h  mem.h  profile.h  qemu-def.h  reg_alloc.h  shadow-stack.h  shadow_stack.h  sys-excp.h  test-def.h  types.h  xtm-qemu-config.h
src/i386/LATX/ir1/: etb.c  ir1.c  ir1.h  meson.build
src/i386/LATX/ir2/: ir2-assemble.c  ir2-la-assemble.h  ir2-la-name.h  ir2.c  ir2.h  ir2_assemble.c  ir2_la_assemble.h  ir2_la_name.h  la-ir2.h  la_ir2.h
src/i386/LATX/optimization/: cam.c  flag-lbt.c  flag-pattern.c  flag-reduction.c  flag_lbt.c  flag_pattern.c  flag_reduction.c  ibtc.c  ir2-optimization.c  ir2_optimization.c  lsfpu.c  njc.c  shadow-stack.c  shadow_stack.c  sys-em.c  sys-lsfpu.c  sys-sigint.c  sys-staticcs.c  trace.h
src/i386/LATX/tests/: dump-translate.c  dump_translate.c  run-one-tb.c  run_one_tb.c
src/i386/LATX/translator/: cross-page-check.c  extension.c  flag-usedef.c  flag_usedef.c  fpu.c  lsenv-offset.c  lsenv_offset.c  meson.build  reg-alloc.c  reg_alloc.c  sys-cvt-addr.c  sys-devel.c  sys-disasm.c  sys-excp.c  sys-fpu.c  sys-helper.c  sys-opnd-process.c  sys-static-codes.c  sys-tr-arith.c  sys-tr-byhand64.c  sys-tr-fcmovcc.c  sys-tr-fldst.c  sys-tr-fp.c  sys-tr-io.c  sys-tr-lock.c  sys-tr-logic.c  sys-tr-misc.c  sys-tr-mov-byhand.c  sys-tr-mov.c  sys-tr-simd.c  sys-tr-softfpu.c  sys-tr-string.c  sys-translate.c  sys.c  tr-arith-byhand.c  tr-arith-sys-byhand.c  tr-arith-sys.c  tr-arith.c  tr-core.c  tr-disasm.c  (+64 more)
(+930 files in other folders)
