i386_ss.add(when: 'CONFIG_LATX', if_true: files(
  'extension.c',
  'reg-alloc.c',
  'tr-arith.c',
  'tr-arith-byhand.c',
  'tr-eflag.c',
  'tr-eflag-process.c',
  'tr-farith.c',
  'tr-fcmovcc.c',
  'tr-fctrl.c',
  'tr-fldst.c',
  'tr-jcc.c',
  'tr-logic.c',
  'tr-logic-byhand.c',
  'tr-misc.c',
  'tr-mov.c',
  'tr-mov-byhand.c',
  'tr-opnd-process.c',
  'tr-setcc.c',
  'tr-simd.c',
  'tr-simd-cmp.c',
  'tr-simd-cvt.c',
  'tr-simd-mov.c',
  'tr-simd-shift.c',
  'translate.c'
))

i386_softmmu_ss.add(when: 'CONFIG_LATX', if_true: files(
  'sys-opnd-process.c',
  'sys-translate.c',
  'sys-eflags.c',
  'sys-disasm.c',
  'sys-cvt-addr.c',
  'sys-static-codes.c',
  'sys.c',
  'sys-eob.c',
  'sys-softmmu.c',
  'sys-helper.c',
  'sys-excp.c',
  'sys-tr-misc.c',
  'sys-tr-arith.c',
  'sys-tr-arith-byhand.c',
  'sys-tr-branch.c',
  'sys-tr-logic.c',
  'sys-tr-logic-byhand.c',
  'sys-tr-mov.c',
  'sys-tr-mov-byhand.c',
  'sys-tr-io.c',
  'sys-tr-setcc.c',
  'sys-tr-string.c',
  'sys-tr-fp.c',
  'sys-tr-fctrl.c',
  'sys-tr-farith.c',
  'sys-tr-fldst.c',
  'sys-tr-fcmovcc.c',
  'sys-tr-simd.c',
  'sys-devel.c',
  'sys-fpu.c',
  'sys-tr-softfpu.c',
  'sys-tr-byhand64.c',
  'sys-tr-lock.c'
))
